# filmweb-api-rs

./: Cargo.toml  README.md
src/: error.rs  filmweb.rs  imdb.rs  lib.rs  utils.rs
src/filmweb/: auth.rs  json.rs  query.rs  utils.rs
