[package]
name = "filmed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "gzip"] }
serde_json = "1.0"
tl = "0.7.7"
scraper = "*"
url = "2.3"
serde = { version = "1.0", features = ["derive"] }
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
once_cell = "1.17"
thiserror = "1.0"
priority-queue = "1.2"
log = "0.4"
regex = "1.7"
csv = "1.1"
fastrand = "1.8"
